--- a/.vscode/transcriptions/requirements.txt
+++ b/.vscode/transcriptions/requirements.txt
@@ -8,3 +8,9 @@ openai==1.3.0
 joblib==1.3.2
 gunicorn==21.2.0
 torch==2.0.1
+streamlit
+flask
+langchain
+langchain-community
+langchain-groq
+python-dotenv
